[EFL][WK2] Context clients should unregister themselves when destroyed https://bugs.webkit.org/show_bug.cgi?id=104113

Reviewed by Kenneth Rohde Christiansen.

Make sure the context clients (History and Download clients)
unregister themselves when destroyed to make sure their
callback functions are never called after the client objects
have been destroyed (i.e. when the parent Ewk_Context has
been destroyed).

This addresses crashing issues after a Ewk_Context object
gets unref'd and destroyed.

* UIProcess/efl/ContextHistoryClientEfl.cpp:
(WebKit::ContextHistoryClientEfl::ContextHistoryClientEfl):
(WebKit):
(WebKit::ContextHistoryClientEfl::~ContextHistoryClientEfl):
* UIProcess/efl/ContextHistoryClientEfl.h:
(ContextHistoryClientEfl):
* UIProcess/efl/DownloadManagerEfl.cpp:
(WebKit::DownloadManagerEfl::~DownloadManagerEfl):
(WebKit):
* UIProcess/efl/DownloadManagerEfl.h:
(DownloadManagerEfl):


Canonical link: https://commits.webkit.org/122410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136833 268f45cc-cd09-0410-ab3c-d52691b4dbfc